# Minesweeper-SDL

./: .gitmodules  CMakeLists.txt  readme.md  test.lua
rc/: rc-v2.rc  rc.rc
src/: Constants.h  Layout.c  Lua.c  Lua.h  Main.c  Matrix.c  Matrix.h  Menu.c  Resources.c  Resources.h  Solver.c  Solver.h  State.c  State.h  Win.h
